tags/2013-08-29_cppreference/Archive/1045022f521495afefc603831da6270e-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int abs(int)’:
main.cpp:6:14: error: declaration of ‘int abs(int)’ has a different exception specifier
 int abs(int i)
              ^
In file included from /usr/include/c++/4.8/cstdlib:72:0,
                 from /usr/include/c++/4.8/ext/string_conversions.h:41,
                 from /usr/include/c++/4.8/bits/basic_string.h:2815,
                 from /usr/include/c++/4.8/string:52,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from main.cpp:2:
/usr/include/stdlib.h:771:12: error: from previous declaration ‘int abs(int) throw ()’
 extern int abs (int __x) __THROW __attribute__ ((__const__)) __wur;
            ^
